#-----------------------------------------------------------------------------
#
# $Id$
#
#-----------------------------------------------------------------------------

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	common \
	tool \
    daemon

EXTRA_DIST = \
	initdb.sql \
	pdpersistd.service \
	pdpersistd.spec.in \
	persist.conf

BUILT_SOURCES = \
	pdpersistd.spec

#-----------------------------------------------------------------------------
